--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.5",
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
+    "angular": "^1.8.2",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
